--- a/templates/todo/tag_list.html
+++ b/templates/todo/tag_list.html
@@ -1,10 +1,27 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container mt-5">
+  <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h1>Tags</h1>
+      <h1>Tags</h1>
+      <a href="{% url 'todo:tag_new' %}" class="btn btn-primary">Add Tag</a>
     </div>
     <table class="table table-striped">
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>Update</th>
+        <th>Delete</th>
+      </tr>
+      </thead>
+      <tbody>
+      {% for tag in tags %}
+        <tr>
+          <td>{{ tag.name }}</td>
+          <td><a href="{% url 'todo:tag_edit' tag.pk %}" class="btn btn-secondary btn-sm">Update</a></td>
+          <td><a href="{% url 'todo:tag_delete' tag.pk %}" class="btn btn-danger btn-sm">Delete</a></td>
+        </tr>
+      {% endfor %}
+      </tbody>
     </table>
-</div>
+  </div>
 {% endblock %}
