--- a/templates/todo/task_list.html
+++ b/templates/todo/task_list.html
@@ -3,7 +3,30 @@
   <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-3">
       <h1>TODO List</h1>
-         
+      <a href="{% url 'todo:task_create' %}" class="btn btn-primary">Add task</a>
+    </div>
+    <ul class="list-group">
+      {% for task in tasks %}
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          <div>
+            <h5 class="mb-1">{{ task.content }}</h5>
+            <small>Created: {{ task.created_at }}</small>
+            {% if task.deadline %}
+              <br><small>Deadline: {{ task.deadline }}</small>
+            {% endif %}
+            <br>
+            <span>Tags:
+              {% for tag in task.tags.all %}
+                <span class="badge bg-secondary">{{ tag.name }}</span>
+              {% endfor %}
+                </span>
           </div>
+          <div class="btn-group">
+            <a href="{% url 'todo:task_update' task.pk %}" class="btn btn-secondary btn-sm">Update</a>
+            <a href="{% url 'todo:task_delete' task.pk %}" class="btn btn-danger btn-sm">Delete</a>
+          </div>
+        </li>
+      {% endfor %}
+    </ul>
   </div>
 {% endblock %}
