--- a/templates/todo/tag_confirm_delete.html
+++ b/templates/todo/tag_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Delete tag?</h1>
+  <h1>Delete "{{ tag.name }}" tag?</h1>
   <form action="" method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Confirm</button>
